...
    <string name="acknowledge">Acknowledge</string>
    <string name="failed_to_sync">Failed To Sync</string>
    <string name="ordered">ORDERED</string>

    <string name="orders_unordered_dose_prompt_title">Unordered Dose</string>
    <string name="orders_unordered_dose_prompt_message">Checkout includes a dose that was not ordered in the EHR.\n\nDo you want to keep the dose?</string>
    <string name="orders_unordered_dose_prompt_yes">Yes, Keep Dose</string>
    <string name="orders_unordered_dose_prompt_no">No, Remove Dose</string>

    <string name="orders_review_doses">Review Doses</string>
    <string name="orders_review_header_title_unordered">Why were these doses dispensed?</string>
    <string name="orders_review_header_subtitle_unordered">Unordered doses have to be manually added to the EHR</string>
    <string name="orders_review_header_title_not_admin">Why were these orders not filled?</string>
...

    <!-- Wrong stock dialog -->
    <string name="dialog_wrong_stock_selected_title">Wrong Stock Selected</string>
    <string name="dialog_wrong_stock_selected_body_fmt">The scanned dose does not match the stock the patient is assigned to. Patient is assigned to %1$s stock.\n\n%2$s</string>
    <string name="dialog_wrong_stock_selected_suffix_fmt">This dose will be deducted from %1$s stock if administered.</string>
    <string name="dialog_wrong_stock_selected_suffix2">Do you want to set the stock?</string>
    <string name="dialog_wrong_stock_selected_remove_dose">Remove Dose</string>
    <string name="dialog_wrong_stock_selected_keep_dose">Keep Dose</string>
    <string name="dialog_wrong_stock_selected_keep_stock">Keep Stock</string>
    <string name="wrong_stock">Wrong Stock</string>

    <!-- Age Warning Dialogs -->
    <string name="age_warning_weeks_pregnant_dialog_title">PREGNANT PEOPLE QUALIFY FOR THIS DOSE:\nHOW MANY WEEKS PREGNANT IS THE PATIENT?</string>
    <string name="age_warning_patient_qualifies">Patient qualifies</string>
    <string name="age_warning_patient_does_not_qualify">Patient does NOT qualify</string>
...

    <!-- Refresh Orders Dialog -->
    <string name="dialog_refresh_orders_title">Refresh Orders</string>
    <string name="dialog_refresh_orders_body">Changes you made to checkout will not be saved</string>

    <!-- Menu Stock Selector -->
    <string name="menu_stock_selector_set_stock">Set Stock</string>
    <string name="menu_stock_selector_private">Private</string>
    <string name="menu_stock_selector_vfc_enrolled">VFC - Enrolled in Medicaid</string>
    <string name="menu_stock_selector_vfc_uninsured">VFC - Uninsured</string>
    <string name="menu_stock_selector_vfc_underinsured">VFC - Underinsured</string>
    <string name="menu_stock_selector_vfc_american_indian_or_alaska_native">VFC - American Indian or Alaska Native</string>
    <string name="menu_stock_selector_state">State</string>
    <string name="menu_stock_selector_three_seventeen">317</string>

...
