...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="@dimen/sp_30"
        tools:text="John Doe" />

    <ImageView
        android:id="@+id/eligibility_icon"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:scaleType="centerInside"
        android:src="@drawable/ic_presentation_prefilled_syringe"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintBottom_toBottomOf="@id/eligibility_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/eligibility_icon"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textview_inventoryType"
            style="@style/H8Bold"
            android:layout_width="@dimen/dp_124"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_rounded_corner_purple"
            android:backgroundTint="@color/list_purple"
...
