...
        app:cardCornerRadius="@dimen/dp_14"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/scanner_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_dark"
            android:layout_gravity="center"></FrameLayout>

        <com.vaxcare.vaxhub.core.ui.ViewfinderView
...
