...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_icon"
        app:layout_constraintEnd_toStartOf="@id/right_icon1"
        app:layout_constraintStart_toEndOf="@id/toolbar_icon"
        app:layout_constraintTop_toTopOf="@id/toolbar_icon">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitleLabel"
...
